--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "dev": "webpack-dev-server",
+    "test": "jest",
+    "test:update": "jest -u",
+    "test:coverage": "jest --coverage",
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet"
+  },
+  "jest" : {
+    "snapshotSerializers": ["jest-serializer-enzyme"]
   },
   "dependencies": {
     "axios": "0.16.1",
